Replace in-memory shuffle with DB-side ORDER BY RAND() LIMIT for suggestion fallback
Co-authored-by: varelaiglesiascarmen <187052009+varelaiglesiascarmen@users.noreply.github.com>